--- a/index.css
+++ b/index.css
@@ -8,12 +8,20 @@
   font-family: 'Cormorant Garamond', serif;
 }
 img {
-    width: 45rem;
+    width: 25rem;
     padding-bottom: 0;
 }
 
 p {
   color: #FCFCF4;
+}
+
+a {
+  color: #FCFCF4;
+}
+
+h1, h2, h3, h4{
+  color: #FCFCF4; 
 }
 
 body{
@@ -24,17 +32,15 @@ body{
     background-size: cover;
     width: 100%;
 }
-::placeholder {
-  color: lightgray;
-}
 
+/* Style the search container. */
 .wrapper{
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 750px;
+  max-width: 550px;
   background: rgba(0,0,0,0.8);
   padding: 30px;
   border-radius: 5px;
@@ -43,7 +49,7 @@ body{
 
 .wrapper .title h2{
   color: #FCFCF4;
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: center;
   margin-bottom: 25px;
 }
@@ -61,51 +67,126 @@ body{
 }
 
 .input-fields {
-  width: 50%;
+  width: 48%;
 }
 
-.input-fields .input, textarea{
-  margin: 15px 0;
+.input-fields .input, textarea {
+  margin: 10px 0;
   background: transparent;
   border: 0px;
   border-bottom: 2px solid #FCFCF4;
   padding: 10px;
   color: #FCFCF4;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   width: 100%;
 }
 
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
-  color: #FCFCF4;
+  color: rgb(116, 116, 116);
 }
 ::-moz-placeholder {
   /* Firefox 19+ */
-  color: #FCFCF4;
+  color: rgb(116, 116, 116);
 }
 :-ms-input-placeholder {
   /* IE 10+ */
-  color: #FCFCF4;
+  color: rgb(116, 116, 116);
 }
 
-/* BUTTON STYLING */
+ul, li {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px;
+}
+
+/* Style the result tiles. */
+.wrapper-tile{
+  width: 70rem;
+  max-width: 45rem;
+  background: rgba(0,0,0,0.8);
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+.wrapper-tile .title h1, h2, h3 {
+  color: #FCFCF4;
+  font-size: 4rem;
+  text-align: start;
+  margin-bottom: 25px;
+}
+
+.results {
+  font-size: 3rem;
+}
+
+.tile-form{
+  display: flex;
+  justify-content: flex-start;
+}
+
+.tile-fields{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-right: 0;
+}
+
+.tile-fields {
+  width: 48%;
+}
+.tile-fields .input, textarea {
+  margin: 10px 0;
+  background: transparent;
+  border: 0px;
+  padding: 10px;
+  color: #FCFCF4;
+  font-size: 1.3rem;
+  width: 100%;
+}
+
+img#menu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 6rem;
+}
+
+img#menu:hover {
+  font-size: larger;
+  font-weight: 700 !important;
+  opacity: 0.7;
+}
+
+.hidden {
+  display: none;
+}
+
+/* BUTTON & LINK STYLING */
+a {
+  display: flex;
+  align-items: center;
+}
 button {
     color: #FCFCF4 !important;
     text-transform: uppercase;
     background: #ECA547;
-    font-size: 2rem;
-    padding: 15px;
+    padding: 10px;
     border: 2px solid #ECA547 !important;
     border-radius: 6px;
     display: flex;
     justify-content: center;
     text-align: center;
-    width: 8rem;
+    width: 6rem;
     transition: all 0.3s ease 0s;
 }
 button:hover {
     color: #ffffff !important;
-    font-size: larger;
+    font-size: large;
     font-weight: 700 !important;
     letter-spacing: 2px;
     background: none;
@@ -116,10 +197,56 @@ button:hover {
     transition: all 0.3s ease 0s;
 }
 
-@media screen and (max-width: 600px){
-  .contact-form{
-    flex-direction: column;
+@media screen and (max-width: 400px){
+
+  img#menu {
+    width: 45rem;
   }
+
+  .contact-form{
+    flex-direction: row;
+  }
+
+  .wrapper-tile{
+    width: 100rem;
+    max-width: 95rem;
+    background: rgba(0,0,0,0.8);
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  }
+
+  .wrapper-tile .title h1, h2, h3 {
+    color: #FCFCF4;
+    font-size: 5rem;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+  
+  .tile-form{
+    display: flex;
+    justify-content: center;
+  }
+  
+  .tile-fields{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-right: 0;
+  }
+  
+  .tile-fields {
+    width: 48%;
+  }
+
+  ul, li {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
+  }
+
   body{
     -webkit-background-size: cover;
     -moz-background-size: cover;
