--- a/index.css
+++ b/index.css
@@ -64,8 +64,12 @@ h2.header-content {
   width: 18rem;
 }
 
-.search-img:hover {
-  font-size: larger;
+button#back{
+  background: #0B0A09;
+  border-radius: 80%;
+}
+button#back:hover {
+  font-size: large;
   opacity: 0.6;
   cursor: pointer;
 }
@@ -77,7 +81,7 @@ h2.header-content {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 550px;
+  max-width: 50px;
   background: rgba(0,0,0,0.8);
   padding: 30px;
   border-radius: 5px;
@@ -104,7 +108,7 @@ h2.header-content {
 }
 
 .input-fields {
-  width: 48%;
+  width: 68%;
 }
 
 .input-fields .input, textarea {
@@ -114,7 +118,7 @@ h2.header-content {
   border-radius: 0.8rem;
   padding: 10px;
   color: #FCFCF4;
-  font-size: 1.4rem;
+  font-size: 1.9rem;
   width: 100%;
 }
 
@@ -203,10 +207,11 @@ a {
   display: flex;
   align-items: center;
 }
-button {
+button#search {
+  margin-top: 4px;
     color: #FCFCF4 !important;
     text-transform: uppercase;
-    font-size: 1rem;
+    font-size: 2rem;
     background: #ECA547;
     padding: 10px;
     border: 2px solid #ECA547 !important;
@@ -214,10 +219,10 @@ button {
     display: flex;
     justify-content: center;
     text-align: center;
-    width: 8rem;
+    width: 100%;
     transition: all 0.3s ease 0s;
 }
-button:hover {
+button#search:hover {
     color: #ffffff !important;
     font-size: large;
     font-weight: 700 !important;
@@ -230,7 +235,7 @@ button:hover {
     transition: all 0.3s ease 0s;
 }
 
-@media screen and (min-width: 500px){
+@media all and (min-width: 500px){
   img#menu {
     display: flex;
     justify-content: center;
