--- a/index.css
+++ b/index.css
@@ -80,9 +80,67 @@ button#plates{
   border: none;
 }
 button#plates:hover {
-  font-size: large;
-  opacity: 0.8;
   cursor: pointer;
+  transform: scale(1.2);
+}
+
+ul#plates-list {
+  display: flex;
+  justify-content: flex-start;
+  padding-top: 10rem;
+  font-size: 5rem;
+  color: #FCFCF4;
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.8);
+  transition: visibility 0s linear 0.35s, opacity 0.35s 0s, transform 0.7s;
+}
+.modal-content {
+  display: block;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  border: 2px solid #f1f1f1;
+  padding: 1rem 1.5rem;
+  width: 25rem;
+  border-radius: 0.5rem;
+}
+.close-button {
+  margin: 0;
+  float: right;
+  width: 2.5rem;
+  color: #ffffff;
+  text-align: center;
+  font-size: 4rem;
+  cursor: pointer;
+  border-radius: 0.25rem;
+}
+.close-button:hover {
+  color: #ECA547;
+  cursor: pointer;
+}
+.show-modal {
+  opacity: 0.9;
+  visibility: visible;
+  transform: scale(1.0);
+  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.added--msg {
+  font-size: 1.5rem;
 }
 
 /* Style the search container. */
@@ -166,8 +224,10 @@ ul, li {
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
 
-.results {
-  font-size: 4rem;
+.name {
+  font-size: 6rem;
+  border: 4px solid #f1f1f1;
+  padding: 2rem;
 }
 
 .tile-form {
@@ -245,7 +305,7 @@ button#search:hover {
     transition: all 0.3s ease 0s;
 }
 
-button#add {
+.add {
   color: #FCFCF4 !important;
   text-transform: uppercase;
   font-size: 1.7rem;
@@ -259,7 +319,38 @@ button#add {
   width: 100%;
   transition: all 0.3s ease 0s;
 }
-button#add:hover {
+.add:hover {
+  color: #ffffff !important;
+  font-size: large;
+  font-weight: 700 !important;
+  letter-spacing: 2px;
+  background: none;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.3s ease 0s;
+}
+
+.add:visited {
+  background:none;
+}
+
+button#back-to-results {
+  color: #f1f1f1 !important;
+  text-transform: uppercase;
+  font-size: 1.7rem;
+  background: #ECA547;
+  padding: 10px;
+  border: 2px solid #FCFCF4 !important;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 60%;
+  transition: all 0.3s ease 0s;
+}
+button#back-to-results:hover {
   color: #ffffff !important;
   font-size: large;
   font-weight: 700 !important;
